# django-server

./: README.md  db.sqlite3  pyproject.toml
.config/nginx/: mysite.conf
.config/uwsgi/: mysite.ini  uwsgi.service
homepage/: forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py
homepage/template/: blank.html  graph.html  index.html  total_graph.html
webproj/: settings.py  urls.py
