[tool.poetry]
name = "django-prac"
version = "0.1.0"
description = ""
authors = ["SonJinHYo <wlsgy95@naver.com>"]
license = "'MIT'"
readme = "README.md"
packages = [{include = "django_prac"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.2"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
